# learn-claude-pydantic

./: .env.example  .gitignore  .gitmodules  Checklist.md  README.md  SUMMARY.md  pyproject.toml
02-pydantic-and-mcp/: 01-pydantic-structured-outputs.md
docs/: QUICKSTART.md
docs/modules/: 01-sdk-fundamentals.md  02-pydantic-models.md  03-structured-outputs.md  04-tool-use.md  05-pydantic-ai.md  06-agents.md  07-multi-agent.md  08-mcp.md
phase-b/: 02-pydantic-ai.md  03-mcp.md  04-capstone.md
phase-c/: COMPARISON.md  c01_comparison.csv  coding_task.py
phase-c/claude-agent-sdk/: README.md  c01_feature_probe.py  c02_coding_task.py  ex01_sdk_basics.py  ex02_todo_and_tasks.py  ex03_subagents.py  ex04_plan_mode.py  ex05_custom_tools_and_hooks.py  ex06_comparison_table.py  t01_sdk_basics.py  t02_todo_and_tasks.py  t02b_safe_write.py  t03_subagents.py  t04_plan_mode.py  t05_custom_tools_and_hooks.py
phase-c/claude-code-cli/: README.md  c01_feature_probe.py  c02_coding_task.py  ex01_cli_basics.py  ex02_todo_and_tasks.py  ex03_subagents.py  ex04_plan_mode.py  ex05_cli_features.py  ex06_comparison_table.py  t01_cli_basics.py  t02_todo_and_tasks.py  t03_subagents.py  t04_plan_mode.py  t05_cli_features.py
phase-c/glm/: README.md  c01_feature_probe.py  c02_coding_task.py  ex01_glm_basics.py  ex02_build_agent_loop.py  run_sdk_on_glm.sh  t01_glm_basics.py  t02_build_agent_loop.py
phase-c/openai-agents-sdk/: README.md  c01_feature_probe.py  c02_coding_task.py  ex01_sdk_basics.py  ex02_handoffs_and_guardrails.py  ex03_hooks_and_tracing.py  ex04_comparison_table.py  (+3 more)
(+19 files in other folders)
